src/test/deca/syntax/valid/custom/if.deca
{
    int i = 0;
    if(i == 1) {
        i = 1;
    } else{
        i = 0;
    }
}