src/test/deca/syntax/invalid/custom/elseif_nocpar.deca
{
if (true){
    println("string");
} else if (true{
i = 1;
}

}